<resources>
    <string name="app_name">Danmaku</string>
    <string name="title_activity_game_screen">Game Screen</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="instructions">The goal of this game is to survive as long as possible without being hit by the projectiles. To move the spaceship hold down anywhere on the screen and drag your finger across the screen, the spaceship will move in accordance with your finger. You will recieve extra points for grazing which is when you get close to a bullet without touching it. Good luck!</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="title">Dodge Fast</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="word_instructions">Instructions</string>
    <string name="image_description">image of the spaceship sprite</string>
    <string name="Scores">EX</string>
</resources>
